--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav a:hover{
 }
 /*PAGINA HOME*/
 section.apresentaçao{
-    min-height: 400px;
+    height: 400px;
     background-image: url(imagens/apresentaçaopricipal.png);
     background-size: cover;
     background-position: center center;
@@ -80,6 +80,7 @@ section.informaçoes{
     font-family: var(--texto);
     margin: 10px;
     max-width: 40%;
+    max-height: 90%;
     font-size: 1.2em;
 }
 .informaçoes h2{
@@ -135,7 +136,7 @@ section.produto{
 .produto p{
     font-family: var(--texto);
     margin: 10px;
-    max-width: 40%;
+    width: 40%;
     font-size: 1.2em;
 }
 .produto h2{
