--- a/style.css
+++ b/style.css
@@ -32,14 +32,10 @@ header a{
     text-decoration: none;
     color: white;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 2px;
+    font-family:var(--texto);
     padding: 5px;
-    font-size: 0.9em;
 }
-header a:hover{
-    text-decoration: underline;
-}
+
 nav{
     background-color: black;
     padding: 5px;
