--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header h1{
 header a{
     text-decoration: none;
     color: white;
-    font-weight: bolder;
+    font-weight:normal;
     font-family:var(--texto);
     padding: 5px;
 }
